# patch_wise_clip

./: .gitignore  README.md  data.py  launch.sh  lightning_wrap.py  llama.py  pyproject.toml  test.py  train.py
latent_clip/: latent_embed.py  model.py
patch_wise_clip/: data.py  loss.py  model.py  scheduler.py  transformer_model.py  zeroshot_metadata.py
