[project]
name = "finetune-image-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "lightning>=2.5.1.post0",
    "ruff>=0.11.8",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
