[project]
name = "finetune-image-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "fairscale>=0.4.13",
    "lightning>=2.5.1.post0",
    "mmdit>=0.2.2",
    "nvitop>=1.5.1",
    "ruff>=0.11.8",
    "s3fs>=2025.3.0",
    "torch>=2.7.0",
    "torchtune>=0.6.1",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "wandb>=0.19.11",
    "x-transformers>=2.3.5",
]
